# simple-cpp-logger

./: .gitignore  README.md
example/simple-cpp-logger-example/: CMakeLists.txt
example/simple-cpp-logger-example/simple-cpp-logger-example/: CMakeLists.txt  logger.cfg.json  simple-cpp-logger-example.cpp  simple-cpp-logger-example.h
include/: SimpleCppLogger.hpp
src/: SimpleCppLogger.cpp
strategy-extensions/: ConfigurableLoggerStrategy.cpp  ConfigurableLoggerStrategy.hpp
